--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <h2>Realty Group</h2>
 
     <!-- your code here! See README.md for deliverables -->
+    <video 
+src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4" 
+controls 
+autoplay
+type="video/mp4"
+width="600px"
+height="400px"
+
+></video>
 
   </body>
 </html>
